--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/extend.texi: Avoid or reduce overfull hboxes.
+
 2002-02-20  Diego Novillo  <dnovillo@redhat.com>
 
 	* expmed.c (store_bit_field): Do not store bit fields using SUBREG
