--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-20  Richard Henderson  <rth@redhat.com>
+
+	PR c/5615
+	* expr.h (ARGS_SIZE_TREE): Convert size.var to ssizetype.
+
 2002-02-20  Tom Tromey  <tromey@redhat.com>
 
 	* config/fr30/fr30.h (DWARF_LINE_MIN_INSTR_LENGTH): Removed.
