--- a/gcc-3_0-branch/ChangeLog
+++ b/gcc-3_0-branch/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.0.4 Released.
 
+2002-02-20  Release Manager
+
+	* GCC 3.0.4 Released.
+
 2002-01-31  Bob Wilson  <bob.wilson@acm.org>
 
 	* config.sub: Add support for Xtensa processors.
