--- a/gcc-3_0-branch/gcc/java/ChangeLog
+++ b/gcc-3_0-branch/gcc/java/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.0.4 Released.
 
+2002-02-20  Release Manager
+
+	* GCC 3.0.4 Released.
+
 2001-12-20  Release Manager
 
 	* GCC 3.0.3 Released.
