--- a/gcc-3_0-branch/libiberty/ChangeLog
+++ b/gcc-3_0-branch/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Release Manager
+
+	* GCC 3.0.4 Released.
+
 2002-01-22  Momchil Velikov  <velco@fadata.bg>
 
 	* configure.in (variable detection): Use arrays of unspecified
