2002-02-20  Philip Blundell  <philb@gnu.org>
	PR 5705
	* config/arm/arm.h (HARD_REGNO_RENAME_OK): New macro.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49911 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-20  Philip Blundell  <philb@gnu.org>
+	
+	PR 5705
+	* config/arm/arm.h (HARD_REGNO_RENAME_OK): New macro.
+
 2002-02-20  Richard Henderson  <rth@redhat.com>
 
 	PR c/5615
