--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-02-20  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.c (ix86_expand_vector_move): Use the mode
+	of the operand, rather than assuming TImode.
+	(ix86_expand_binop_builtin): Cope with commutative patterns
+	using nonimmediate_operand for both operands.
+	(ix86_expand_timode_binop_builtin): Likewise.
+	(ix86_expand_store_builtin): Validate operand 1.
+	(ix86_expand_unop1_builtin): Likewise.
+
 2002-02-20  Philip Blundell  <philb@gnu.org>
 	
 	PR 5705
