PR c++/5713 	* c-decl.c (duplicate_decls): Return 0 if issued error about 	redeclaration.
	* decl.c (duplicate_decls): Return 0 if issued error about
	redeclaration.

	* gcc.dg/noncompile/20020220-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49915 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-20  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/5713
+	* c-decl.c (duplicate_decls): Return 0 if issued error about
+	redeclaration.
+
 2002-02-20  Roger Sayle  <roger@eyesopen.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 
