PR c++/4401 	* c-common.c (pointer_int_sum): Moved from... 	* c-typeck.c (pointer_int_sum): ...here. 	* c-common.h (pointer_int_sum): Add prototype.
	* typeck.c (cp_pointer_int_sum): Renamed from
	pointer_int_sum, call pointer_int_sum.

	* g++.dg/opt/ptrintsum1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49916 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-02-20  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/4401
+	* c-common.c (pointer_int_sum): Moved from...
+	* c-typeck.c (pointer_int_sum): ...here.
+	* c-common.h (pointer_int_sum): Add prototype.
+
+2002-02-20  Jakub Jelinek  <jakub@redhat.com>
+
 	PR c++/5713
 	* c-decl.c (duplicate_decls): Return 0 if issued error about
 	redeclaration.
