* c-decl.c (pushdecl): If no global declaration is found for an extern declaration in block scope, try a limbo one.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49917 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-20  Alexandre Oliva  <aoliva@redhat.com>
+
+	* c-decl.c (pushdecl): If no global declaration is found for an
+	extern declaration in block scope, try a limbo one.
+
 2002-02-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/4401
