PR debug/4461 	* varasm.c (get_pool_constant_mark): New. 	* rtl.h (get_pool_constant_mark): Add prototype. 	* dwarf2out.c (mem_loc_descriptor): A pool constant cannot 	be represented if it has not been output.
	* gcc.dg/debug/20020220-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49921 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-20  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/4461
+	* varasm.c (get_pool_constant_mark): New.
+	* rtl.h (get_pool_constant_mark): Add prototype.
+	* dwarf2out.c (mem_loc_descriptor): A pool constant cannot
+	be represented if it has not been output.
+
 2002-02-20  Alexandre Oliva  <aoliva@redhat.com>
 
 	* combine.c (do_SUBST): Sanity check substitutions of
