2002-02-21  Andreas Tobler  <toa@pop.agri.ch>
        * src/powerpc/ffi_darwin.c (ffi_prep_args): Skip appropriate
        number of GPRs for floating-point arguments.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49934 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-21  Andreas Tobler  <toa@pop.agri.ch>
+
+	* src/powerpc/ffi_darwin.c (ffi_prep_args): Skip appropriate
+	number of GPRs for floating-point arguments.
+
 2002-01-31  Anthony Green  <green@redhat.com>
 
 	* configure: Rebuilt.
