--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020220-2.c: New test.
+
 2002-02-20  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.c-torture/compile/20020110.c: New test.
