--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2002-02-21  Jakub Jelinek  <jakub@redhat.com>
 
+	* gcc.dg/20020220-1.c: New test.
+
 	* gcc.dg/20020220-2.c: New test.
 
 2002-02-20  Alexandre Oliva  <aoliva@redhat.com>
