PR optimization/4994 	* config/i386/i386.md (movsi_1, movsf_1): Support MMX -> MMX 	register moves.
	* g++.dg/opt/mmx1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49939 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,10 @@
-2002-02-20  Jakub Jelinek  <jakub@redhat.com>
+2002-02-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR optimization/4994
+	* config/i386/i386.md (movsi_1, movsf_1): Support MMX -> MMX
+	register moves.
+
+2002-02-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/4574
 	* expr.h (expand_and): Add mode argument.
